# papers

./: .editorconfig  .gitlab-ci.yml  .gitmodules  Cargo.toml  NEWS  NEWS.md  README.md  TESTING.md  meson.build  meson_options.txt  papers.doap
.gitlab/issue_templates/: Default.md
build-aux/flatpak/: nightly.json  org.gnome.Papers.Devel.json
build-aux/macos/: papers.modules
data/: meson.build  org.gnome.Papers.gschema.xml  org.gnome.Papers.metainfo.xml.in.in  papers.1
help/: LINGUAS  meson.build
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/hu/: hu.po
help/it/: it.po
help/kk/: kk.po
help/sr/: sr.po
help/tr/: tr.po
libdocument/: meson.build  pps-annotation.c  pps-annotation.h  pps-attachment.c  pps-document-annotations.c  pps-document-annotations.h  pps-document-factory.c  pps-document-factory.h  pps-document-find.c  pps-document-find.h  pps-document-info.h  pps-document-links.c  pps-document-misc.c  pps-document-misc.h  pps-document-signatures.c  pps-document-signatures.h  pps-document-text.c  pps-document-text.h  pps-document.c  pps-document.h  pps-file-helpers.c  pps-form-field-private.h  pps-form-field.c  pps-form-field.h  pps-link-action.c  pps-link-dest.c  pps-link.c  pps-mapping-list.c  pps-mapping-list.h  pps-render-context.c  pps-render-context.h  pps-selection.c  pps-selection.h  pps-signature.c  pps-signature.h  pps-xmp.c  pps-xmp.h
libdocument/backend/: meson.build
libdocument/backend/comics/: comics-document.c  pps-archive.c  pps-archive.h  test-pps-archive.c
libdocument/backend/djvu/: djvu-document-private.h  djvu-document.c  djvu-links.c
libview/: meson.build  pps-annotation-layer-ink.c  pps-annotation-layer-ink.h  pps-annotation-layer-objects.h  pps-annotation-layer-shape.c  pps-annotation-layer.c  pps-annotation-layer.h  pps-annotation-overlay.c  pps-annotation-overlay.h  pps-annotation-window.c  pps-annotation-window.h  pps-colors.c  pps-colors.h  pps-css-utils.c  pps-css-utils.h  pps-debug.c  pps-debug.h  pps-form-field-accessible.c  pps-form-field-accessible.h  pps-form-overlay.c  pps-image-accessible.c  pps-image-accessible.h  pps-job.c  pps-job.h  pps-jobs.c  pps-jobs.h  pps-link-accessible.c  pps-link-accessible.h  pps-page-accessible.c  pps-page-accessible.h  pps-page-cache.c  pps-page-cache.h  pps-pixbuf-cache.c  pps-pixbuf-cache.h  pps-print-operation.c  pps-view-accessible.c  pps-view-accessible.h  pps-view-marshal.list  pps-view-page.c  pps-view-page.h  (+8 more)
libview/context/: pps-annotation-model.c  pps-annotation-model.h  pps-annotations-context.c  pps-annotations-context.h  pps-attachment-context.c  pps-document-model.c  pps-document-model.h  pps-search-context.c  pps-search-context.h  pps-search-result.c  pps-undo-context.c
libview/factory/: pps-annotation-widget-factory.c  pps-annotation-widget-factory.h  pps-element-widget-factory.c
libview/tests/: meson.build  test-pps-jobs.c
nautilus/: pps-nautilus-extension.c  pps-nautilus-extension.h
po/: LINGUAS  POTFILES.in  POTFILES.skip  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  meson.build  nb.po  nl.po  nn.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+12 more)
previewer/: meson.build  pps-previewer-window.blp  pps-previewer-window.c  pps-previewer.c
rust/: meson.build  update-bindings.sh
rust/papers-document/: Cargo.toml  Gir.toml
rust/papers-document/sys/: Cargo.toml  build.rs
rust/papers-document/sys/src/: lib.rs
rust/papers-document/sys/src/auto/: versions.txt
rust/papers-document/sys/tests/: abi.rs  constant.c  layout.c
rust/papers-view/: Cargo.toml  Gir.toml
rust/papers-view/src/: lib.rs  (+2 more)
rust/papers-view/sys/: Cargo.toml
rust/papers-view/sys/src/: lib.rs
rust/papers-view/sys/src/auto/: versions.txt
rust/papers-view/sys/tests/: abi.rs  constant.c  layout.c
rust/pps-girs/: PapersDocument-4.0.gir  PapersView-4.0.gir
shell/: Cargo.toml  ev-sidebar-annotations.c  ev-sidebar-annotations.h  ev-sidebar-attachments.c  ev-sidebar-attachments.h  ev-sidebar-bookmarks.c  ev-sidebar-bookmarks.h  ev-sidebar-layers.c  ev-sidebar-layers.h  ev-sidebar-links.c  ev-sidebar-links.h  ev-sidebar-page.c  ev-sidebar-page.h  ev-sidebar-thumbnails.c  ev-sidebar-thumbnails.h  evince-sidebar-annotations.ui  evince-sidebar-bookmarks.ui  evince.gresource.xml  meson.build  papers.css  papers.gresource.xml.in  pps-document-view.c  pps-find-sidebar.c  pps-find-sidebar.h  pps-find-sidebar.ui
shell-rs/ev-girs/: PapersDocument-4.0.gir  PapersShell-4.0.gir  PapersView-4.0.gir
shell-rs/src/: application.rs  search_box.rs  sidebar_thumbnails.rs  window.rs
shell/resources/: help-overlay.blp  help-overlay.ui  meson.build  papers.css  papers.gresource.xml.in  pps-annotation-properties-dialog.blp  pps-document-view.blp  pps-document-view.ui  pps-find-sidebar.blp  pps-find-sidebar.ui  pps-loader-view.blp  pps-properties-signatures.blp  pps-properties-signatures.ui  pps-search-box.blp  pps-shortcuts-dialog.blp  pps-sidebar-annotations-row.blp  pps-sidebar-annotations.blp  pps-sidebar-annotations.ui  pps-sidebar-layers.ui  pps-sidebar-links.blp  pps-sidebar-links.ui  pps-sidebar-thumbnails.blp  pps-sidebar-thumbnails.ui  pps-sidebar.ui  pps-window.blp  pps-window.ui
shell/src/: annotation_properties_dialog.rs  application.rs  deps.rs  document_view.rs  find_sidebar.rs  ink_transformation.rs  keyring.rs  main.rs  meson.build  page_selector.rs  password_view.rs  properties_general.rs  properties_signatures.rs  properties_window.rs  search_box.rs  sidebar.rs  sidebar_annotations.rs  sidebar_annotations_row.rs  sidebar_attachments.rs  sidebar_links.rs  sidebar_thumbnails.rs  signature_image_processing.rs  signature_manager.rs  simple_color_swatch.rs  window.rs
shell/src/document_view/: actions.rs  enums.rs  io.rs  print.rs  signals.rs
thumbnailer/: Cargo.toml  meson.build  papers-thumbnailer.c
thumbnailer/src/: main.rs
(+84 files in other folders)
