[profile.release]
lto = true

[workspace]
resolver = "2"

members = [
  './rust/papers-view',
  './rust/papers-view/sys',
  './rust/papers-document',
  './rust/papers-document/sys',
  './shell',
]

exclude = [
  './rust/gir',
]

[workspace.package]
authors = ["The Papers Developers"]
edition = "2021"
homepage = "https://apps.gnome.org/Papers/"
repository = "https://gitlab.gnome.org/GNOME/Incubator/papers"
rust-version = "1.70"
