[profile.release]
lto = true

[workspace]
resolver = "2"

members = [
  './rust/papers-view',
  './rust/papers-view/sys',
  './rust/papers-document',
  './rust/papers-document/sys',
  './shell',
]

exclude = [
  './rust/gir',
]

[workspace.package]
authors = ["The Papers Developers"]
edition = "2021"
homepage = "https://apps.gnome.org/Papers/"
repository = "https://gitlab.gnome.org/GNOME/Incubator/papers"
rust-version = "1.80"

[workspace.dependencies]
papers-document = { path = "rust/papers-document" }
papers-document-sys = { path = "rust/papers-document/sys" }
papers-view = { path = "rust/papers-view" }
papers-view-sys = { path = "rust/papers-view/sys" }

gtk = { package = "gtk4", version = "0.9" }
gtk-sys = { package = "gtk4-sys", version = "0.9" }
gdk = { package = "gdk4", version = "0.9" }
gdk-sys = { package = "gdk4-sys", version = "0.9" }
glib = "0.20"
glib-sys = "0.20"
gobject-sys = "0.20"
gio = "0.20"
gio-sys = "0.20"
gdk-pixbuf = "0.20"
gdk-pixbuf-sys = "0.20"
pango = "0.20"
pango-sys = "0.20"
cairo-rs = "0.20"
cairo-sys-rs = "0.20"
