[package]
name = "papers"
version = "0.1.0"
license = "GPL-2.0-or-later"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
with-keyring = ["dep:oo7"]
spell-check = []

[dependencies]
papers-view.workspace = true
papers-document.workspace = true
env_logger = "0.11"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
log = "0.4"
lru = "0.13"
futures = "0.3"
oo7 = { version = "0.3", optional = true }

gtk = { workspace = true, features = ["gnome_45"]}

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
