[package]
name = "papers"
version = "0.1.0"
license = "GPL-2.0-or-later"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
with-keyring = ["dep:oo7"]
spell-check = []

[dependencies]
papers-view.workspace = true
papers-document.workspace = true
env_logger = "0.11"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
log = "0.4"
lru = "0.15"
futures = "0.3"
gtk = { workspace = true, features = ["gnome_45"]}
git-version = "0.3"

[dependencies.oo7]
version = "0.4"
default-features = false
features = ["async-std", "native_crypto"]
optional = true

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_7"]
