[package]
name = "papers"
version = "0.1.0"
license = "GPL-2.0-or-later"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
with-keyring = ["dep:oo7"]
spell-check = []

[dependencies]
papers-view.workspace = true
papers-document.workspace = true
gtk.workspace = true
env_logger.workspace = true
log.workspace = true
gettext-rs.workspace = true
lru = "0.16"
futures = "0.3"
git-version = "0.3"
formatx = "0.2"

[dependencies.oo7]
version = "0.5"
default-features = false
features = ["async-std", "native_crypto"]
optional = true

[dependencies.adw]
package = "libadwaita"
version = "0.8"
features = ["v1_7"]
