[package]
name = "papers-document-sys"
version = "0.0.1"
build = "build.rs"
license = "MIT"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.system-deps.papers_document_4_0]
name = "papers-document-4.0"
version = "4"

[package.metadata.system-deps.papers_document_4_0.v42]
version = "42"

[package.metadata.system-deps.papers_document_4_0.v47]
version = "47"

[package.metadata.system-deps.papers_document_4_0.v48]
version = "48"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "papers_document_sys"

[dependencies]
libc = "0.2"
gio-sys.workspace = true
glib-sys.workspace = true
gobject-sys.workspace = true
gdk-pixbuf-sys.workspace = true
pango-sys.workspace = true
cairo-sys-rs.workspace = true
gtk-sys.workspace = true
gdk-sys.workspace = true

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v42 = []
v47 = ["v42"]
v48 = ["v47"]
